--- a/package.json
+++ b/package.json
@@ -5,13 +5,20 @@
   "main": "app.js",
   "scripts": {
     "start": "node src/index.js",
-    "test": "jest"
+    "build": "echo 'No hay proceso de compilación en este proyecto'",
+    "test": "jest --coverage --forceExit",
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "eslint": "^9.23.0",
     "expres": "^0.0.5",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "jest": "^29.7.0"
+  },
+  "devDependencies": {
+    "supertest": "^7.1.0"
   }
 }
